# django_rest

./: .gitignore  README.md  pyproject.toml
quickstart/: models.py  views.py
quickstart/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
