[project]
name = "django-rest"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "PorcoRosso85", email = "1.is.universe@gmail.com" }]
dependencies = ["django>=5.0.2", "djangorestframework>=3.14.0"]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "django_rest:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.1",
    "black>=24.1.1",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "pytest-django>=4.8.0",
]

[tool.rye.scripts]
server = { cmd = "./manage.py runserver" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_rest"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tutorial.settings"
python_files = ["tests.py", "test_*.py", "tests/**/*.py", "**/*.py"]
